language/move-lang/tests/move_check/translated_ir_tests/signer/move_to_missing_signer.exp
error: 

   ┌── tests/move_check/translated_ir_tests/signer/move_to_missing_signer.move:4:9 ───
   │
 4 │         move_to<R>(R { f: false })
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid call of 'move_to'. The call expected 2 argument(s) but got 1
   ·
 4 │         move_to<R>(R { f: false })
   │                   ---------------- Found 1 argument(s) here
   │

error: 

   ┌── tests/move_check/translated_ir_tests/signer/move_to_missing_signer.move:4:9 ───
   │
 4 │         move_to<R>(R { f: false })
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid call of 'move_to'. Invalid argument for parameter '0'
   ·
 4 │         move_to<R>(R { f: false })
   │                    -------------- The type: '0x8675309::M::R'
   ·
 4 │         move_to<R>(R { f: false })
   │         ------- Is not compatible with: '&signer'
   │

error: 

    ┌── tests/move_check/translated_ir_tests/signer/move_to_missing_signer.move:14:14 ───
    │
 14 │         () = move_to<R<bool>>(R<bool> { f: false });
    │              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid call of 'move_to'. The call expected 2 argument(s) but got 1
    ·
 14 │         () = move_to<R<bool>>(R<bool> { f: false });
    │                              ---------------------- Found 1 argument(s) here
    │

error: 

    ┌── tests/move_check/translated_ir_tests/signer/move_to_missing_signer.move:14:14 ───
    │
 14 │         () = move_to<R<bool>>(R<bool> { f: false });
    │              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid call of 'move_to'. Invalid argument for parameter '0'
    ·
 14 │         () = move_to<R<bool>>(R<bool> { f: false });
    │                               -------------------- The type: '0x8675309::N::R<bool>'
    ·
 14 │         () = move_to<R<bool>>(R<bool> { f: false });
    │              ------- Is not compatible with: '&signer'
    │

